tests/expectations/compiler/definition/tuple_def_fail.out
Error [EPAR0370005]: expected an identifier -- found '1'
    --> compiler-test:4:14
     |
   4 |         let (1u8+1u8,1u8+1u8): (u8,u8) = (1u8,2u8);
     |              ^
